[package]
name = "three_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
bevy_ggrs = { version = "0.17.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.11.0", features = ["ggrs"] }
bevy_asset_loader = "0.22.0"
log = { version = "0.4.22", default-features = false }
clap = { version = "4.5.23", features = ["derive"] }
bevy_roll_safe = "0.4.0"
bevy_egui = "0.31.1"
rand = "0.8"
rand_xoshiro = "0.6"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ["--cfg=web_sys_unstable_apis"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
