[package]
name = "three_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.15.1", features = ["webgpu"]}
bevy_matchbox = { version = "0.11.0" }
bevy_asset_loader = "0.22.0"
log = { version = "0.4.25", default-features = false }
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
wasm-bindgen ={ version = "0.2.100"}
serde = "1.0.217"
bitcode = "0.6.3"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ["--cfg=web_sys_unstable_apis"]
opt-level = "s"
# lto = "thin"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 's'
lto = "thin"
codegen-units = 1

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"
# lto = "thin"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
