[package]
name = "three_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = ["bevy_asset","bevy_sprite", "bevy_text","bevy_ui","bevy_window","bevy_winit","dynamic_linking","webgpu","multi_threaded","png"] }
bevy_matchbox = { version = "0.11.0" }
bevy_asset_loader = "0.22.0"
log = { version = "0.4.25", default-features = false }
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.9.0"
rand_xoshiro = "0.7.0"
wasm-bindgen = { version = "0.2.100" }
serde = "1.0.217"
bitcode = "0.6.3"
    